Re-wrote to avoid issues with JSTL messing up view-scoped beans. See http://stackoverflow.com/questions/2842401/jstl-cforeach-causes-viewscoped-bean-to-invoke-postconstruct-on-every-request

--- a/admin-gui/src/main/webapp/styles/style.css
+++ b/admin-gui/src/main/webapp/styles/style.css
@@ -353,3 +353,7 @@
    border-radius: 6px;
    padding: 5px;
 }
+
+.bold {
+   font-weight: bold;
+}
